<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue_mini_twitter"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/activity_login__img__icon_primary"
        android:layout_width="@dimen/dp300"
        android:layout_height="@dimen/dp150"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo_minitwitter_white"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_login__input__email"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp32"
        android:hint="@string/hint_email_login_activity"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/hint_email_login_activity"
        app:layout_constraintEnd_toEndOf="@id/activity_login__img__icon_primary"
        app:layout_constraintStart_toStartOf="@id/activity_login__img__icon_primary"
        app:layout_constraintTop_toBottomOf="@id/activity_login__img__icon_primary" />

    <EditText
        android:id="@+id/activity_login__input__password"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:hint="@string/hint_password_login_activity"
        android:autofillHints="@string/hint_password_login_activity"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/activity_login__input__email"
        app:layout_constraintStart_toStartOf="@id/activity_login__input__email"
        app:layout_constraintTop_toBottomOf="@id/activity_login__input__email" />

    <Button
        android:id="@+id/activity_login__btn__login_in"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:backgroundTint="@color/white"
        android:text="@string/btn_text_login_activity"
        android:textColor="@color/color_blue_mini_twitter_dark"
        app:layout_constraintEnd_toEndOf="@id/activity_login__input__password"
        app:layout_constraintStart_toStartOf="@id/activity_login__input__password"
        app:layout_constraintTop_toBottomOf="@id/activity_login__input__password" />

    <TextView
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/text_create_account"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="@id/activity_login__btn__login_in"
        app:layout_constraintStart_toStartOf="@id/activity_login__btn__login_in"
        app:layout_constraintTop_toBottomOf="@id/activity_login__btn__login_in" />
</androidx.constraintlayout.widget.ConstraintLayout>